add: infrastructure postgres storage

--- a/src/BankEventStore.Api/appsettings.json
+++ b/src/BankEventStore.Api/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "BankApp": "Host=localhost;Database=eventstore;User ID=postgres;Password=53cret"
+  }
 }
