--- a/src/BankEventStore.Application/BankEventStore.Application.csproj
+++ b/src/BankEventStore.Application/BankEventStore.Application.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Scrutor" Version="3.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="../BankEventStore.Core/BankEventStore.Core.csproj" />
   </ItemGroup>
 </Project>
